Fixed broken styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,10 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    body { padding-top: 40px; }
+    body {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
 }
 
 .showCursor {
